Wed Apr 15 03:16:18 CEST 2015
	Fixing issue #3753 (testcase issue). -CG

Wed Apr 15 00:30:34 CEST 2015
	Fix looping issue when using MHD_USE_POLL_INTERNALLY
	and a client times out. -LB

Sun Apr 12 21:48:50 CEST 2015
	Fix looping issue when combining MHD_USE_EPOLL_LINUX_ONLY
	with HTTPS and slow clients. -CG

Fri Apr 10 22:02:27 CEST 2015
	Fix logic to add "Connection: Close" that was broken in 0.9.38
	when adding MHD_RF_HTTP_VERSION_1_0_ONLY. -CG

Fri Apr 10 00:38:40 CEST 2015
	Ensure fast termination in MHD_USE_THREAD_PER_CONNECTION
	mode on W32 by using signal pipe. -CG

Thu Apr  9 09:01:15 CEST 2015
	Fixing issue with undrained signal pipe when using
	MHD_USE_SELECT_INTERNALLY and MHD_USE_POLL in combination
	with MHD_resume_connection(), causing 100% CPU usage. -DD

Tue Apr  7 00:12:36 CEST 2015
	Releasing libmicrohttpd 0.9.40. -CG

Sat Apr  4 18:28:24 CEST 2015
	Fix potential deadlock issue in MHD_USE_THREAD_PER_CONNECTION
	mode if shutdown is initiated while connections are active. -CG

Sat Apr  4 17:48:13 CEST 2015
	Fix issue in thread-pool mode where a MHD_stop_daemon()
	might not reach threads that stopped listening because
	we hit the maximum number of concurrent connections and
	the option MHD_USE_PIPE_FOR_SHUTDOWN was also not used.
	Testcase added as well. -CG

Fri Apr  3 12:55:31 CEST 2015
	Update HTTPS testcases to avoid SSLv3, as SSLv3 is dead.

Fri Apr  3 12:25:28 CEST 2015
	Do not enforce FD_SETSIZE-limit on worker control
	pipe when using MHD_USE_EPOLL_LINUX_ONLY (#3751). -MH/CG

Tue Mar 31 10:28:26 CEST 2015
	Adding MHD_OPTION_NOTIFY_CONNECTION,
	MHD_CONNECTION_NOTIFY_STARTED,
	MHD_CONNECTION_NOTIFY_CLOSED and
	MHD_CONNECTION_INFO_SOCKET_CONTEXT to allow
	applications to trigger operations when TCP
	connections start or end, instead of just
	exposing HTTP requests starting and ending. -RG/CG

Thu Feb 26 09:55:43 CET 2015
	Fixing bug that prevented MHD_OPTION_HTTPS_MEM_DHPARAMS
	from working within a MHD_OPTION_ARRAY. -DD
